--- a/mirte_msgs/CMakeLists.txt
+++ b/mirte_msgs/CMakeLists.txt
@@ -16,6 +16,7 @@ set(msg_files
   "msg/Intensity.msg"
   "msg/IntensityDigital.msg"
   "msg/Keypad.msg"
+  "msg/ServoPosition.msg"
 )
 
 set(srv_files
@@ -31,6 +32,7 @@ set(srv_files
   "srv/SetPinMode.srv"
   "srv/SetPinValue.srv"
   "srv/SetServoAngle.srv"
+  "srv/GetServoRange.srv"
 )
 
 
