--- a/mirte_msgs/CMakeLists.txt
+++ b/mirte_msgs/CMakeLists.txt
@@ -17,6 +17,7 @@ set(msg_files
   "msg/IntensityDigital.msg"
   "msg/Keypad.msg"
   "msg/ServoPosition.msg"
+  "msg/SetSpeedNamed.msg"
 )
 
 set(srv_files
@@ -33,6 +34,7 @@ set(srv_files
   "srv/SetPinValue.srv"
   "srv/SetServoAngle.srv"
   "srv/GetServoRange.srv"
+  "srv/SetSpeedMultiple.srv"
 )
 
 
