--- a/mirte_msgs/CMakeLists.txt
+++ b/mirte_msgs/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(std_srvs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
 set(msg_files
+  "msg/Color.msg"
   "msg/Encoder.msg"
   "msg/Intensity.msg"
   "msg/IntensityDigital.msg"
@@ -21,6 +22,7 @@ set(msg_files
 )
 
 set(srv_files
+  "srv/GetColor.srv"
   "srv/GetDistance.srv"
   "srv/GetEncoder.srv"
   "srv/GetIntensity.srv"
@@ -30,7 +32,6 @@ set(srv_files
   "srv/SetLEDValue.srv"
   "srv/SetMotorSpeed.srv"
   "srv/SetOLEDImage.srv"
-  "srv/SetPinMode.srv"
   "srv/SetPinValue.srv"
   "srv/SetServoAngle.srv"
   "srv/GetServoRange.srv"
