Update OLED msgs

--- a/mirte_msgs/CMakeLists.txt
+++ b/mirte_msgs/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 set(msg_files
   "msg/Color.msg"
@@ -32,6 +33,9 @@ set(srv_files
   "srv/SetLEDValue.srv"
   "srv/SetMotorSpeed.srv"
   "srv/SetOLEDImage.srv"
+  "srv/SetOLEDFile.srv"
+  "srv/SetOLEDText.srv"
+  "srv/SetOLEDImageLegacy.srv"
   "srv/SetPinValue.srv"
   "srv/SetServoAngle.srv"
   "srv/GetServoRange.srv"
@@ -42,7 +46,7 @@ set(srv_files
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
   ${srv_files}
-  DEPENDENCIES builtin_interfaces std_msgs std_srvs geometry_msgs
+  DEPENDENCIES builtin_interfaces std_msgs std_srvs geometry_msgs sensor_msgs
 )
 
 
