--- a/mirte_msgs/package.xml
+++ b/mirte_msgs/package.xml
@@ -11,9 +11,11 @@
   
   <build_depend>geometry_msgs</build_depend>
   <depend>std_srvs</depend>
+  <build_depend>sensor_msgs</build_depend>
+
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
