--- a/mirte_msgs/package.xml
+++ b/mirte_msgs/package.xml
@@ -10,7 +10,7 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   
   <build_depend>geometry_msgs</build_depend>
-
+  <depend>std_srvs</depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
