--- a/mirte_msgs/CMakeLists.txt
+++ b/mirte_msgs/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
 set(msg_files
   "msg/ColorHSL.msg"
