dont build bringup

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,7 @@ jobs:
 
       - name: self-checkout
         run: |
+             rm -rf ./mirte_bringup # dont want that one
              mkdir srcO
              mv ./mirte_* ./srcO
              ls -l ./
