--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
         matrix:
                 ros_distro: [humble]
                 deb_distro: [jammy]
-                arch: [amd64, arm64]
+                arch: [amd64, arm64, armhf]
 
     steps:
       - uses: actions/checkout@v4
