--- a/.github/workflows/buildROSErr.yaml
+++ b/.github/workflows/buildROSErr.yaml
@@ -3,7 +3,7 @@ permissions:
   contents: write
 jobs:
   build_testing:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
         matrix:
                 ros_distro: [humble]
@@ -18,13 +18,12 @@ jobs:
       - uses: actions/checkout@v4
       - run: rm -rf ./mirte* # don't want our packages to be in the way
 
-      - uses: arendjan/ros-deb-builder-action@main
+      - uses: jspricke/ros-deb-builder-action@main
         with:
           ROS_DISTRO: ${{ matrix.ros_distro }}
           DEB_DISTRO: ${{ matrix.deb_distro }}
           DEB_ARCH: ${{ matrix.arch }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # ROSDEP_SOURCE: yaml file:///home/runner/work/mirte-ros-packages/mirte-ros-packages/rosdep.yaml debian
           REPOS_FILE: ./ros2_err_sources.repos
           SKIP_CHECKOUT: true
           PACKAGES_BRANCH: ros_err_amd64
