--- a/.github/workflows/buildROSErr.yaml
+++ b/.github/workflows/buildROSErr.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
         matrix:
-                ros_distro: [humble]
+                ros_distro: [humble, jazzy]
                 deb_distro: [jammy]
                 arch: [
                         amd64, 
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: rm -rf ./mirte* # don't want our packages to be in the way
 
-      - uses: jspricke/ros-deb-builder-action@main
+      - uses: arendjan/ros-deb-builder-action@main
         with:
           ROS_DISTRO: ${{ matrix.ros_distro }}
           DEB_DISTRO: ${{ matrix.deb_distro }}
