--- a/.github/workflows/buildROSErr.yaml
+++ b/.github/workflows/buildROSErr.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
         matrix:
-                ros_distro: [humble, jazzy]
+                ros_distro: [humble]
                 deb_distro: [jammy]
                 arch: [
                         amd64, 
@@ -17,14 +17,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rm -rf ./mirte* # don't want our packages to be in the way
-
+      
       - uses: arendjan/ros-deb-builder-action@main
         with:
           ROS_DISTRO: ${{ matrix.ros_distro }}
           DEB_DISTRO: ${{ matrix.deb_distro }}
           DEB_ARCH: ${{ matrix.arch }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPOS_FILE: ./ros2_err_sources.repos
+          REPOS_FILE: ./ros2_err_sources_e.repos
           SKIP_CHECKOUT: true
           PACKAGES_BRANCH: ros_err_amd64
           
