--- a/.github/workflows/buildROS.yaml
+++ b/.github/workflows/buildROS.yaml
@@ -20,19 +20,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: rm -rf ./mirte*
-      - run: | # ament_cmake_core needs some files from ament_package, but they are included and in a cyclic dependency, so just copy them directly. Not nice, but it works.
-          set -xe
-          mkdir -p srces/
-          wget https://github.com/ros2-gbp/ament_cmake-release/archive/release/humble/ament_cmake_core/1.3.10-1.tar.gz -O /tmp/ament_cmake_core-1.3.10-1.tar.gz
-          tar -xvf /tmp/ament_cmake_core-1.3.10-1.tar.gz -C ./srces/
-          # ls -l ./srces/ament_cmake*
-          # ls -l ./srces/ament_cmake*/cmake/
-          # ls -l ./srces/ament_cmake*/cmake/package_templates/
-          # ls -l /tmp/ament_package
-          git clone https://github.com/ament/ament_package.git -b humble /tmp/ament_package || echo ls /asdf
-          # ls -l /tmp/ament_package
-          mv /tmp/ament_package/ament_package/ ./srces/ament_cmake-release-release-humble-ament_cmake_core-1.3.10-1/cmake/package_templates/ament_package
-          # tree ./srces/ament_cmake-release-release-humble-ament_cmake-1.3.10-1
+      # - run: | # ament_cmake_core needs some files from ament_package, but they are included and in a cyclic dependency, so just copy them directly. Not nice, but it works.
+      #     set -xe
+      #     mkdir -p srces/
+      #     wget https://github.com/ros2-gbp/ament_cmake-release/archive/release/humble/ament_cmake_core/1.3.10-1.tar.gz -O /tmp/ament_cmake_core-1.3.10-1.tar.gz
+      #     tar -xvf /tmp/ament_cmake_core-1.3.10-1.tar.gz -C ./srces/
+      #     # ls -l ./srces/ament_cmake*
+      #     # ls -l ./srces/ament_cmake*/cmake/
+      #     # ls -l ./srces/ament_cmake*/cmake/package_templates/
+      #     # ls -l /tmp/ament_package
+      #     git clone https://github.com/ament/ament_package.git -b humble /tmp/ament_package || echo ls /asdf
+      #     # ls -l /tmp/ament_package
+      #     mv /tmp/ament_package/ament_package/ ./srces/ament_cmake-release-release-humble-ament_cmake_core-1.3.10-1/cmake/package_templates/ament_package
+      #     # tree ./srces/ament_cmake-release-release-humble-ament_cmake-1.3.10-1
       - uses: jspricke/ros-deb-builder-action@main
         with:
           ROS_DISTRO: ${{ matrix.ros_distro }}
