--- a/.github/workflows/buildROS.yaml
+++ b/.github/workflows/buildROS.yaml
@@ -42,5 +42,6 @@ jobs:
           # ROSDEP_SOURCE: yaml file:///home/runner/work/mirte-ros-packages/mirte-ros-packages/rosdep.yaml debian
           REPOS_FILE: ./ros2_sources.repos
           SKIP_CHECKOUT: true
+          SKIP_ROS_REPOSITORY: true
           
 
