--- a/.github/workflows/buildROS.yaml
+++ b/.github/workflows/buildROS.yaml
@@ -21,9 +21,10 @@ jobs:
       - uses: actions/checkout@v4
       - run: rm -rf ./mirte*
       - run: |
-          cd srces/
-          git clone https://github.com/ros-infrastructure/catkin_pkg.git
-          rm -rf catkin_pkg/test/
+          ls
+          # cd srces/
+          # git clone https://github.com/ros-infrastructure/catkin_pkg.git
+          # rm -rf catkin_pkg/test/
       # - run: | # ament_cmake_core needs some files from ament_package, but they are included and in a cyclic dependency, so just copy them directly. Not nice, but it works.
       #     set -xe
       #     mkdir -p srces/
@@ -46,6 +47,6 @@ jobs:
           # ROSDEP_SOURCE: yaml file:///home/runner/work/mirte-ros-packages/mirte-ros-packages/rosdep.yaml debian
           REPOS_FILE: ./ros2_sources.repos
           SKIP_CHECKOUT: true
-          SKIP_ROS_REPOSITORY: true
+          # SKIP_ROS_REPOSITORY: true
           
 
