--- a/.github/workflows/buildROS.yaml
+++ b/.github/workflows/buildROS.yaml
@@ -38,7 +38,7 @@ jobs:
       #     # ls -l /tmp/ament_package
       #     mv /tmp/ament_package/ament_package/ ./srces/ament_cmake-release-release-humble-ament_cmake_core-1.3.10-1/cmake/package_templates/ament_package
       #     # tree ./srces/ament_cmake-release-release-humble-ament_cmake-1.3.10-1
-      - uses: jspricke/ros-deb-builder-action@main
+      - uses: arendjan/ros-deb-builder-action@upmain
         with:
           ROS_DISTRO: ${{ matrix.ros_distro }}
           DEB_DISTRO: ${{ matrix.deb_distro }}
